[project]
name = "comfyui-d2-xyplot-utils"
description = "Custom node for using Prompt S/R in XY Plot\nAlso includes nodes for listing generic parameters like seed and cfg\nEasy to manipulate as elements are separated by line breaks\nDesigned for use with the XY Plot custom node qq-nodes-comfyui, but may work with other custom nodes as well"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/da2el-ai/ComfyUI-d2-xyplot-utils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-d2-xyplot-utils"
Icon = ""
